# auth-api-django

./: .pre-commit-config.yaml  Makefile  README.md  config.py  pyproject.toml  pytest.ini  requirements.txt
src/django_app/: settings.py  urls.py
src/tests/unit/domain/: test_unit_users_domain.py
src/users/: models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
